@@ -18,7 +18,6 @@
     - youtube thumbnails not always working right
     - saves some of them twice...
     - mentions are all messed up with 2 accounts
-    - pebble
 
 - Notification Center:
     - Combined pictures from Evolve
@@ -30,4 +29,4 @@
     -- change the picture loading to like it is with emojis
     -- mute hashtags
     -- Use the search stuff to get forward replies (https://dev.twitter.com/discussions/17647)
-    -- Spannable String to main timelines (
+    -- Spannable String to main timelines (http://stackoverflow.com/questions/7570239/android-linkify-text-spannable-text-in-single-text-view-as-like-twitter-twee)
